# noter

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BLUEPRINT.md  MISSION.md  ROADMAP.md  TECHNICAL_SPEC.md
docs/specs/: agent-linker.md  agent-planner.md  agent-searcher.md  agent-synthesizer.md  agent-writer.md  orchestrator.md  overview.md
src/noter/: cache.py  cli.py  config.py  exceptions.py  llm.py  orchestrator.py  schemas.py
src/noter/agents/: linker.py  planner.py  searcher.py  synthesizer.py  writer.py
tests/: conftest.py  test_cache.py  test_llm.py  test_orchestrator.py
tests/agents/: test_linker.py  test_planner.py  test_searcher.py  test_synthesizer.py  test_writer.py
